--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -3,17 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ffffff"
     tools:context="com.example.macbook.theapp.ListTasks">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:gravity="center"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="40dp"
+        android:background="#ffffff">
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,7 +25,9 @@
             android:layout_above="@android:id/list"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignTop="@android:id/list" />
+            android:layout_alignTop="@android:id/list"
+            android:background="#000000"
+            android:textColor="#41D2D2"/>
 
         <ListView
             android:id="@android:id/list"
@@ -31,7 +36,45 @@
         </ListView>
 
 
+
         </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:id="@+id/greenline_top"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:background="#41D2D2"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:id="@+id/greenline_bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:background="#41D2D2"/>
+    //signout button
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:text="Signout"
+        android:id="@+id/btn_signout"
+        android:layout_above="@android:id/list"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="-5dp"
+        android:textSize="16sp"
+        android:layout_marginLeft="10dp"
+        android:background="#ffffff"
+        android:textColor="#000000"/>
+
+
 
 
 </RelativeLayout>
