--- a/app/src/main/res/layout/row_task.xml
+++ b/app/src/main/res/layout/row_task.xml
@@ -28,7 +28,8 @@
             android:layout_height="wrap_content"
             android:textSize="19sp"
             android:textColor="#222222"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
 
 
         <TextView
