--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,44 +1,74 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="200dp"
+    android:background="#000000">
 
     <EditText
+        android:layout_marginTop="30dp"
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Name the activity..."
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/greenallround"/>
     <EditText
+        android:layout_marginTop="10dp"
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:hint="Brief description..."
         android:layout_below="@+id/title"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:textSize="20sp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/greenallround"
+        />
 
     <Button
+        android:layout_marginRight="7dp"
+        android:layout_marginBottom="5dp"
         android:id="@+id/btn_add_accept"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="Accept"
-        android:layout_below="@+id/description"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+
+
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+
+        android:background="#41D2D2"
+        android:textColor="#ffffff"
+        android:textSize="27sp"/>
     <Button
+        android:layout_marginLeft="7dp"
         android:id="@+id/btn_add_cancel"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:layout_below="@+id/btn_add_accept"
+
+        android:background="#41D2D2"
+        android:textColor="#ffffff"
+        android:textSize="27sp"
+        android:layout_alignTop="@+id/btn_add_accept"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ADD ACTIVITY"
+        android:textSize="25sp"
+        android:textColor="#ffffff"
+        android:id="@+id/textView2"
+        android:textIsSelectable="true"
+        android:typeface="sans"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
