--- a/app/src/main/res/layout/activity_task_edit.xml
+++ b/app/src/main/res/layout/activity_task_edit.xml
@@ -2,25 +2,39 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/hdblackbackground">
+
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTitle"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:textColor="#000000"
+        android:background="@drawable/greenallround"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editBrfDesc"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:textColor="#000000"
+        android:background="@drawable/greenallround"/>/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editDesc"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:textColor="#000000"
+        android:background="@drawable/greenallround"/>/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -28,20 +42,41 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Accept"
-            android:id="@+id/btn_edit_accept" />
+
 
         <Button
+            android:layout_marginLeft="07dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:id="@+id/btn_edit_cancel"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:padding="5dp"
+
+            android:background="#41D2D2"
+            android:textColor="#ffffff"
+            android:textSize="27sp"/>
             />
 
-        </LinearLayout>
+        <Button
+
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Accept"
+            android:id="@+id/btn_edit_accept"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+
+            android:background="#41D2D2"
+            android:textColor="#ffffff"
+            android:textSize="27sp"
+            android:padding="5dp"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
