--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,8 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name= "dialogbox" parent="android:Theme.Holo.Dialog.MinWidth">
+    <style name= "dialogbox" parent="android:Theme.Holo.Dialog.NoActionBar.MinWidth">
+
 
     </style>
 
