--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,16 +66,27 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Login"
         android:background="#41D2D2"
         android:textColor="#ffffff"
         android:textSize="25dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/etPass"
-        android:layout_marginTop="12dp"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
+    <Button
+        android:id="@+id/btn_signup"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Signup"
+        android:background="#41D2D2"
+        android:textColor="#ffffff"
+        android:textSize="25dp"
+        android:layout_alignTop="@+id/btn_login"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
